# FastFitsCutter

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  main.rs.backup  main.rs.fitsrs  main.rs.inmem  main_fitrs2.rs  main_rustronomy.rs
tests/: cli.rs  testimg.fits
