[package]
name = "ffcitw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
derive = "1.0.0"
fitsio = { version = "0.21.2", features = ["array"] }
fitsio-sys = "0.5.2"
fitsrs = "0.2.9"
ndarray = "0.15.6"
plotters = "0.3.5"
rustronomy-fits = "0.2.0"
wcs = "0.2.8"

[profile.release]
debug = false
