[package]
name = "FastFitsCutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "<4.5", features = ["derive"] }
csv = "1.3.0"
fitsio = { version = "0.21.2", features = ["array"] }
fitsio-sys = "0.5.2"
fitsrs = "0.2.11"
#fitsrs = { git = "https://github.com/tikk3r/fitsrs", branch="only-header-reads"}
ndarray = "0.15.6"
rayon = "1.10.0"
wcs = "0.2.8"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[profile.release]
debug = false

[[bin]]
name = "ffc"
path = "src/main.rs"

[patch.crates-io]
#fitsrs = { path = "fitsrs" }
fitsrs = { git = "https://github.com/tikk3r/fitsrs", branch="only-header-reads"}
